# data-science-leader-projects

./: README.md
01-ai-recommendation-ab-testing/backend/: Dockerfile  alembic.ini  pyproject.toml
01-ai-recommendation-ab-testing/backend/alembic/: env.py
01-ai-recommendation-ab-testing/backend/alembic/versions/: e329273dffa3_initial_schema.py
01-ai-recommendation-ab-testing/backend/app/: config.py  main.py  seed.py
01-ai-recommendation-ab-testing/backend/app/analytics/: statistics.py
01-ai-recommendation-ab-testing/backend/app/api/: analytics.py  events.py  experiments.py  recommendations.py
01-ai-recommendation-ab-testing/backend/app/ml/: base_model.py  collaborative_filtering.py  deep_learning.py  model_registry.py
01-ai-recommendation-ab-testing/backend/app/models/: __init__.py  assignment.py  base.py  experiment.py  interaction.py  item.py  user.py
01-ai-recommendation-ab-testing/backend/app/schemas/: analytics.py  event.py  experiment.py  recommendation.py
01-ai-recommendation-ab-testing/backend/app/services/: analytics_service.py  event_service.py  experiment_service.py  recommendation_service.py
01-ai-recommendation-ab-testing/backend/scripts/: migrate.ps1  reset_db.ps1
01-ai-recommendation-ab-testing/backend/src/recommendation_ab_testing/: __init__.py
02-genai-chatbot-experimentation/backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
02-genai-chatbot-experimentation/backend/app/: main.py
02-genai-chatbot-experimentation/backend/app/api/: router.py
02-genai-chatbot-experimentation/backend/app/core/: database.py  redis.py
02-genai-chatbot-experimentation/backend/app/models/: __init__.py  assignment.py  audit.py  conversation.py  document.py  experiment.py  feedback.py  hallucination.py  message.py  (+2 more)
02-genai-chatbot-experimentation/backend/migrations/: env.py
02-genai-chatbot-experimentation/backend/seed_data/: seed.py
(+55 files in other folders)
