[project]
name = "genai-chatbot-experimentation"
version = "0.1.0"
description = "Healthcare GenAI Chatbot A/B Experimentation Hub"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.0",
    "redis[hiredis]>=5.2.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.12",
    "groq>=0.13.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "pgvector>=0.3.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "markdown>=3.6.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
